final part compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program_helper -> declaration program_helper
Rule 2     program_helper -> definition program_helper
Rule 3     program_helper -> declaration
Rule 4     program_helper -> definition
Rule 5     program -> program_helper
Rule 6     declaration -> DECL VARIABLE LPAREN arguments RPAREN type
Rule 7     declaration -> DECL VARIABLE LPAREN empty_args RPAREN type
Rule 8     definition -> DEF VARIABLE LPAREN arguments RPAREN type LBRACE def_block return RBRACE
Rule 9     definition -> DEF VARIABLE LPAREN empty_args RPAREN type LBRACE def_block return RBRACE
Rule 10    type -> COLON TYPE_INT
Rule 11    type -> COLON TYPE_FLOAT
Rule 12    type -> COLON TYPE_VOID
Rule 13    type -> COLON TYPE_STRING
Rule 14    type -> COLON TYPE_BOOLEAN
Rule 15    empty -> <empty>
Rule 16    empty_args -> <empty>
Rule 17    empty_args_inv -> <empty>
Rule 18    args -> VARIABLE type COMMA args
Rule 19    args -> VARIABLE type
Rule 20    arguments -> args
Rule 21    args_inv -> expression COMMA args_inv
Rule 22    args_inv -> expression
Rule 23    arguments_funinvocation -> args_inv
Rule 24    arguments_funinvocation -> empty_args_inv
Rule 25    stats -> statment
Rule 26    stats -> statment stats
Rule 27    statments -> stats
Rule 28    def_stats -> def_statment
Rule 29    def_stats -> def_statment def_stats
Rule 30    def_statments -> def_stats
Rule 31    def_statment -> statment_expression
Rule 32    def_statment -> if
Rule 33    def_statment -> if_else
Rule 34    def_statment -> while
Rule 35    def_statment -> var_decl
Rule 36    def_statment -> var_assign
Rule 37    def_statment -> array_decl
Rule 38    def_statment -> array_assign
Rule 39    def_statment -> print
Rule 40    block -> LBRACE statments RBRACE
Rule 41    block -> LBRACE empty RBRACE
Rule 42    def_block -> def_statments
Rule 43    def_block -> empty
Rule 44    statment -> return
Rule 45    statment -> statment_expression
Rule 46    statment -> if
Rule 47    statment -> if_else
Rule 48    statment -> while
Rule 49    statment -> var_decl
Rule 50    statment -> var_assign
Rule 51    statment -> array_decl
Rule 52    statment -> array_assign
Rule 53    statment -> print
Rule 54    print_helper -> COMMA expression
Rule 55    print_helper -> COMMA expression print_helper
Rule 56    print -> PRINT LPAREN STRING print_helper RPAREN SEMICOLON
Rule 57    print -> PRINT LPAREN STRING empty RPAREN SEMICOLON
Rule 58    return -> RETURN empty_args SEMICOLON
Rule 59    return -> RETURN expression SEMICOLON
Rule 60    statment_expression -> expression SEMICOLON
Rule 61    if -> IF expression block
Rule 62    if_else -> IF expression block ELSE block
Rule 63    while -> WHILE expression block
Rule 64    var_decl -> VARIABLE type EQUALS expression SEMICOLON
Rule 65    create_array -> CREATEARRAY LPAREN expression RPAREN
Rule 66    array_decl -> VARIABLE type LBRACKET expression RBRACKET SEMICOLON
Rule 67    array_decl -> VARIABLE type EQUALS create_array SEMICOLON
Rule 68    var_assign -> VARIABLE EQUALS expression SEMICOLON
Rule 69    array_assign -> VARIABLE LBRACKET expression RBRACKET EQUALS expression SEMICOLON
Rule 70    expression -> expression PLUS expression
Rule 71    expression -> expression MINUS expression
Rule 72    expression -> expression TIMES expression
Rule 73    expression -> expression DIVIDE expression
Rule 74    expression -> expression MOD expression
Rule 75    expression -> expression AND expression
Rule 76    expression -> expression OR expression
Rule 77    expression -> expression EQUALS_EQUALS expression
Rule 78    expression -> expression NOT_EQUALS expression
Rule 79    expression -> expression GREATER expression
Rule 80    expression -> expression LESS expression
Rule 81    expression -> expression GREATER_EQUAL expression
Rule 82    expression -> expression LESS_EQUAL expression
Rule 83    expression -> MINUS expression
Rule 84    expression -> LPAREN expression RPAREN
Rule 85    expression -> FLOAT
Rule 86    expression -> INT
Rule 87    expression -> STRING
Rule 88    expression -> VARIABLE
Rule 89    expression -> TRUE
Rule 90    expression -> FALSE
Rule 91    expression -> NOT_UNARY expression
Rule 92    get_array -> GETARRAY LPAREN VARIABLE RPAREN
Rule 93    expression -> VARIABLE LBRACKET expression RBRACKET
Rule 94    expression -> get_array LBRACKET expression RBRACKET
Rule 95    expression -> VARIABLE LPAREN arguments_funinvocation RPAREN

Terminals, with rules where they appear

AND                  : 75
COLON                : 10 11 12 13 14
COMMA                : 18 21 54 55
CREATEARRAY          : 65
DECL                 : 6 7
DEF                  : 8 9
DIVIDE               : 73
ELSE                 : 62
EQUALS               : 64 67 68 69
EQUALS_EQUALS        : 77
FALSE                : 90
FLOAT                : 85
GETARRAY             : 92
GREATER              : 79
GREATER_EQUAL        : 81
IF                   : 61 62
INT                  : 86
LBRACE               : 8 9 40 41
LBRACKET             : 66 69 93 94
LESS                 : 80
LESS_EQUAL           : 82
LPAREN               : 6 7 8 9 56 57 65 84 92 95
MINUS                : 71 83
MOD                  : 74
NOT_EQUALS           : 78
NOT_UNARY            : 91
OR                   : 76
PLUS                 : 70
PRINT                : 56 57
RBRACE               : 8 9 40 41
RBRACKET             : 66 69 93 94
RETURN               : 58 59
RPAREN               : 6 7 8 9 56 57 65 84 92 95
SEMICOLON            : 56 57 58 59 60 64 66 67 68 69
STRING               : 56 57 87
TIMES                : 72
TRUE                 : 89
TYPE_BOOLEAN         : 14
TYPE_FLOAT           : 11
TYPE_INT             : 10
TYPE_STRING          : 13
TYPE_VOID            : 12
VARIABLE             : 6 7 8 9 18 19 64 66 67 68 69 88 92 93 95
WHILE                : 63
error                : 

Nonterminals, with rules where they appear

args                 : 18 20
args_inv             : 21 23
arguments            : 6 8
arguments_funinvocation : 95
array_assign         : 38 52
array_decl           : 37 51
block                : 61 62 62 63
create_array         : 67
declaration          : 1 3
def_block            : 8 9
def_statment         : 28 29
def_statments        : 42
def_stats            : 29 30
definition           : 2 4
empty                : 41 43 57
empty_args           : 7 9 58
empty_args_inv       : 24
expression           : 21 22 54 55 59 60 61 62 63 64 65 66 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 84 91 93 94
get_array            : 94
if                   : 32 46
if_else              : 33 47
print                : 39 53
print_helper         : 55 56
program              : 0
program_helper       : 1 2 5
return               : 8 9 44
statment             : 25 26
statment_expression  : 31 45
statments            : 40
stats                : 26 27
type                 : 6 7 8 9 18 19 64 66 67
var_assign           : 36 50
var_decl             : 35 49
while                : 34 48

Parsing method: LALR

state 0

    (0) S' -> . program
    (5) program -> . program_helper
    (1) program_helper -> . declaration program_helper
    (2) program_helper -> . definition program_helper
    (3) program_helper -> . declaration
    (4) program_helper -> . definition
    (6) declaration -> . DECL VARIABLE LPAREN arguments RPAREN type
    (7) declaration -> . DECL VARIABLE LPAREN empty_args RPAREN type
    (8) definition -> . DEF VARIABLE LPAREN arguments RPAREN type LBRACE def_block return RBRACE
    (9) definition -> . DEF VARIABLE LPAREN empty_args RPAREN type LBRACE def_block return RBRACE

    DECL            shift and go to state 5
    DEF             shift and go to state 6

    program                        shift and go to state 1
    program_helper                 shift and go to state 2
    declaration                    shift and go to state 3
    definition                     shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (5) program -> program_helper .

    $end            reduce using rule 5 (program -> program_helper .)


state 3

    (1) program_helper -> declaration . program_helper
    (3) program_helper -> declaration .
    (1) program_helper -> . declaration program_helper
    (2) program_helper -> . definition program_helper
    (3) program_helper -> . declaration
    (4) program_helper -> . definition
    (6) declaration -> . DECL VARIABLE LPAREN arguments RPAREN type
    (7) declaration -> . DECL VARIABLE LPAREN empty_args RPAREN type
    (8) definition -> . DEF VARIABLE LPAREN arguments RPAREN type LBRACE def_block return RBRACE
    (9) definition -> . DEF VARIABLE LPAREN empty_args RPAREN type LBRACE def_block return RBRACE

    $end            reduce using rule 3 (program_helper -> declaration .)
    DECL            shift and go to state 5
    DEF             shift and go to state 6

    declaration                    shift and go to state 3
    program_helper                 shift and go to state 7
    definition                     shift and go to state 4

state 4

    (2) program_helper -> definition . program_helper
    (4) program_helper -> definition .
    (1) program_helper -> . declaration program_helper
    (2) program_helper -> . definition program_helper
    (3) program_helper -> . declaration
    (4) program_helper -> . definition
    (6) declaration -> . DECL VARIABLE LPAREN arguments RPAREN type
    (7) declaration -> . DECL VARIABLE LPAREN empty_args RPAREN type
    (8) definition -> . DEF VARIABLE LPAREN arguments RPAREN type LBRACE def_block return RBRACE
    (9) definition -> . DEF VARIABLE LPAREN empty_args RPAREN type LBRACE def_block return RBRACE

    $end            reduce using rule 4 (program_helper -> definition .)
    DECL            shift and go to state 5
    DEF             shift and go to state 6

    definition                     shift and go to state 4
    program_helper                 shift and go to state 8
    declaration                    shift and go to state 3

state 5

    (6) declaration -> DECL . VARIABLE LPAREN arguments RPAREN type
    (7) declaration -> DECL . VARIABLE LPAREN empty_args RPAREN type

    VARIABLE        shift and go to state 9


state 6

    (8) definition -> DEF . VARIABLE LPAREN arguments RPAREN type LBRACE def_block return RBRACE
    (9) definition -> DEF . VARIABLE LPAREN empty_args RPAREN type LBRACE def_block return RBRACE

    VARIABLE        shift and go to state 10


state 7

    (1) program_helper -> declaration program_helper .

    $end            reduce using rule 1 (program_helper -> declaration program_helper .)


state 8

    (2) program_helper -> definition program_helper .

    $end            reduce using rule 2 (program_helper -> definition program_helper .)


state 9

    (6) declaration -> DECL VARIABLE . LPAREN arguments RPAREN type
    (7) declaration -> DECL VARIABLE . LPAREN empty_args RPAREN type

    LPAREN          shift and go to state 11


state 10

    (8) definition -> DEF VARIABLE . LPAREN arguments RPAREN type LBRACE def_block return RBRACE
    (9) definition -> DEF VARIABLE . LPAREN empty_args RPAREN type LBRACE def_block return RBRACE

    LPAREN          shift and go to state 12


state 11

    (6) declaration -> DECL VARIABLE LPAREN . arguments RPAREN type
    (7) declaration -> DECL VARIABLE LPAREN . empty_args RPAREN type
    (20) arguments -> . args
    (16) empty_args -> .
    (18) args -> . VARIABLE type COMMA args
    (19) args -> . VARIABLE type

    RPAREN          reduce using rule 16 (empty_args -> .)
    VARIABLE        shift and go to state 13

    arguments                      shift and go to state 14
    empty_args                     shift and go to state 15
    args                           shift and go to state 16

state 12

    (8) definition -> DEF VARIABLE LPAREN . arguments RPAREN type LBRACE def_block return RBRACE
    (9) definition -> DEF VARIABLE LPAREN . empty_args RPAREN type LBRACE def_block return RBRACE
    (20) arguments -> . args
    (16) empty_args -> .
    (18) args -> . VARIABLE type COMMA args
    (19) args -> . VARIABLE type

    RPAREN          reduce using rule 16 (empty_args -> .)
    VARIABLE        shift and go to state 13

    arguments                      shift and go to state 17
    empty_args                     shift and go to state 18
    args                           shift and go to state 16

state 13

    (18) args -> VARIABLE . type COMMA args
    (19) args -> VARIABLE . type
    (10) type -> . COLON TYPE_INT
    (11) type -> . COLON TYPE_FLOAT
    (12) type -> . COLON TYPE_VOID
    (13) type -> . COLON TYPE_STRING
    (14) type -> . COLON TYPE_BOOLEAN

    COLON           shift and go to state 20

    type                           shift and go to state 19

state 14

    (6) declaration -> DECL VARIABLE LPAREN arguments . RPAREN type

    RPAREN          shift and go to state 21


state 15

    (7) declaration -> DECL VARIABLE LPAREN empty_args . RPAREN type

    RPAREN          shift and go to state 22


state 16

    (20) arguments -> args .

    RPAREN          reduce using rule 20 (arguments -> args .)


state 17

    (8) definition -> DEF VARIABLE LPAREN arguments . RPAREN type LBRACE def_block return RBRACE

    RPAREN          shift and go to state 23


state 18

    (9) definition -> DEF VARIABLE LPAREN empty_args . RPAREN type LBRACE def_block return RBRACE

    RPAREN          shift and go to state 24


state 19

    (18) args -> VARIABLE type . COMMA args
    (19) args -> VARIABLE type .

    COMMA           shift and go to state 25
    RPAREN          reduce using rule 19 (args -> VARIABLE type .)


state 20

    (10) type -> COLON . TYPE_INT
    (11) type -> COLON . TYPE_FLOAT
    (12) type -> COLON . TYPE_VOID
    (13) type -> COLON . TYPE_STRING
    (14) type -> COLON . TYPE_BOOLEAN

    TYPE_INT        shift and go to state 26
    TYPE_FLOAT      shift and go to state 27
    TYPE_VOID       shift and go to state 28
    TYPE_STRING     shift and go to state 29
    TYPE_BOOLEAN    shift and go to state 30


state 21

    (6) declaration -> DECL VARIABLE LPAREN arguments RPAREN . type
    (10) type -> . COLON TYPE_INT
    (11) type -> . COLON TYPE_FLOAT
    (12) type -> . COLON TYPE_VOID
    (13) type -> . COLON TYPE_STRING
    (14) type -> . COLON TYPE_BOOLEAN

    COLON           shift and go to state 20

    type                           shift and go to state 31

state 22

    (7) declaration -> DECL VARIABLE LPAREN empty_args RPAREN . type
    (10) type -> . COLON TYPE_INT
    (11) type -> . COLON TYPE_FLOAT
    (12) type -> . COLON TYPE_VOID
    (13) type -> . COLON TYPE_STRING
    (14) type -> . COLON TYPE_BOOLEAN

    COLON           shift and go to state 20

    type                           shift and go to state 32

state 23

    (8) definition -> DEF VARIABLE LPAREN arguments RPAREN . type LBRACE def_block return RBRACE
    (10) type -> . COLON TYPE_INT
    (11) type -> . COLON TYPE_FLOAT
    (12) type -> . COLON TYPE_VOID
    (13) type -> . COLON TYPE_STRING
    (14) type -> . COLON TYPE_BOOLEAN

    COLON           shift and go to state 20

    type                           shift and go to state 33

state 24

    (9) definition -> DEF VARIABLE LPAREN empty_args RPAREN . type LBRACE def_block return RBRACE
    (10) type -> . COLON TYPE_INT
    (11) type -> . COLON TYPE_FLOAT
    (12) type -> . COLON TYPE_VOID
    (13) type -> . COLON TYPE_STRING
    (14) type -> . COLON TYPE_BOOLEAN

    COLON           shift and go to state 20

    type                           shift and go to state 34

state 25

    (18) args -> VARIABLE type COMMA . args
    (18) args -> . VARIABLE type COMMA args
    (19) args -> . VARIABLE type

    VARIABLE        shift and go to state 13

    args                           shift and go to state 35

state 26

    (10) type -> COLON TYPE_INT .

    COMMA           reduce using rule 10 (type -> COLON TYPE_INT .)
    RPAREN          reduce using rule 10 (type -> COLON TYPE_INT .)
    DECL            reduce using rule 10 (type -> COLON TYPE_INT .)
    DEF             reduce using rule 10 (type -> COLON TYPE_INT .)
    $end            reduce using rule 10 (type -> COLON TYPE_INT .)
    LBRACE          reduce using rule 10 (type -> COLON TYPE_INT .)
    EQUALS          reduce using rule 10 (type -> COLON TYPE_INT .)
    LBRACKET        reduce using rule 10 (type -> COLON TYPE_INT .)


state 27

    (11) type -> COLON TYPE_FLOAT .

    COMMA           reduce using rule 11 (type -> COLON TYPE_FLOAT .)
    RPAREN          reduce using rule 11 (type -> COLON TYPE_FLOAT .)
    DECL            reduce using rule 11 (type -> COLON TYPE_FLOAT .)
    DEF             reduce using rule 11 (type -> COLON TYPE_FLOAT .)
    $end            reduce using rule 11 (type -> COLON TYPE_FLOAT .)
    LBRACE          reduce using rule 11 (type -> COLON TYPE_FLOAT .)
    EQUALS          reduce using rule 11 (type -> COLON TYPE_FLOAT .)
    LBRACKET        reduce using rule 11 (type -> COLON TYPE_FLOAT .)


state 28

    (12) type -> COLON TYPE_VOID .

    COMMA           reduce using rule 12 (type -> COLON TYPE_VOID .)
    RPAREN          reduce using rule 12 (type -> COLON TYPE_VOID .)
    DECL            reduce using rule 12 (type -> COLON TYPE_VOID .)
    DEF             reduce using rule 12 (type -> COLON TYPE_VOID .)
    $end            reduce using rule 12 (type -> COLON TYPE_VOID .)
    LBRACE          reduce using rule 12 (type -> COLON TYPE_VOID .)
    EQUALS          reduce using rule 12 (type -> COLON TYPE_VOID .)
    LBRACKET        reduce using rule 12 (type -> COLON TYPE_VOID .)


state 29

    (13) type -> COLON TYPE_STRING .

    COMMA           reduce using rule 13 (type -> COLON TYPE_STRING .)
    RPAREN          reduce using rule 13 (type -> COLON TYPE_STRING .)
    DECL            reduce using rule 13 (type -> COLON TYPE_STRING .)
    DEF             reduce using rule 13 (type -> COLON TYPE_STRING .)
    $end            reduce using rule 13 (type -> COLON TYPE_STRING .)
    LBRACE          reduce using rule 13 (type -> COLON TYPE_STRING .)
    EQUALS          reduce using rule 13 (type -> COLON TYPE_STRING .)
    LBRACKET        reduce using rule 13 (type -> COLON TYPE_STRING .)


state 30

    (14) type -> COLON TYPE_BOOLEAN .

    COMMA           reduce using rule 14 (type -> COLON TYPE_BOOLEAN .)
    RPAREN          reduce using rule 14 (type -> COLON TYPE_BOOLEAN .)
    DECL            reduce using rule 14 (type -> COLON TYPE_BOOLEAN .)
    DEF             reduce using rule 14 (type -> COLON TYPE_BOOLEAN .)
    $end            reduce using rule 14 (type -> COLON TYPE_BOOLEAN .)
    LBRACE          reduce using rule 14 (type -> COLON TYPE_BOOLEAN .)
    EQUALS          reduce using rule 14 (type -> COLON TYPE_BOOLEAN .)
    LBRACKET        reduce using rule 14 (type -> COLON TYPE_BOOLEAN .)


state 31

    (6) declaration -> DECL VARIABLE LPAREN arguments RPAREN type .

    DECL            reduce using rule 6 (declaration -> DECL VARIABLE LPAREN arguments RPAREN type .)
    DEF             reduce using rule 6 (declaration -> DECL VARIABLE LPAREN arguments RPAREN type .)
    $end            reduce using rule 6 (declaration -> DECL VARIABLE LPAREN arguments RPAREN type .)


state 32

    (7) declaration -> DECL VARIABLE LPAREN empty_args RPAREN type .
